fix mobile nav alignment glitch and add color to pricing section

--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -30,17 +30,14 @@
 }
 
 @mixin bttnStyle {
-  cursor: pointer;
-  text-transform: uppercase;
-  max-height: 40px;
-  font-size: 0.75em;
-  font-weight: 400;
-  color: $darkSecondary;
-  transition-duration: 0.5s;
-  padding: 10px 20px;
-  min-width: 50px;
-  // border-radius: 20px;
-  border: none;
-  // border: 1px solid $darkSecondary;
-  background-color: white;
+  // text-transform: uppercase;
+  // max-height: 40px;
+  // font-size: 0.75em;
+  // font-weight: 400;
+  // color: $darkSecondary;
+  // transition-duration: 0.5s;
+  // padding: 10px 20px;
+  // min-width: 50px;
+  // border: none;
+  // background-color: white;
 }
