--- a/styles/style.scss
+++ b/styles/style.scss
@@ -73,11 +73,11 @@ nav {
   max-height: 70vh;
   overflow: hidden;
 
-  & #banner-img-div {
+  #banner-img-div {
     position: absolute;
     z-index: 1;
 
-    & #banner-img {
+    #banner-img {
       max-width: 25%;
       border-radius: 15px;
       background-color: hsla(104, 35%, 67%, 0.76);
@@ -182,6 +182,16 @@ nav {
       border-left: 1.5px solid $mediumPrimary;
       border-right: 1.5px solid $mediumPrimary;
     }
+  }
+}
+
+#pricing-section{
+  .heading-medium{
+    color: $mediumPrimary;
+  }
+
+  h2{
+    color: $lightPrimary;
   }
 }
 
